# spline-lstm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUI_COMPLETE_QA_REPORT.md  LICENSE  Makefile  OPERATIONS_QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  tmp.keras
.github/: PULL_REQUEST_TEMPLATE.md
checkpoints/: example_model.keras  example_model.keras_metrics.json
configs/: phase1.yaml
docs/: BLUEPRINT.md  DEMO_RESULT_20260220_0357.md  E2E_EXECUTION_CODER_NOTES.md  E2E_EXECUTION_PM_TRACKER.md  E2E_EXECUTION_REVIEW.md  E2E_TEST_CHECKLIST.md  E2E_TEST_PLAN.md  E2E_WITH_SYNTHETIC_RESULTS.md  E2E_WITH_SYNTHETIC_REVIEW.md  E2E_WITH_SYNTHETIC_REVIEW_FINAL.md  FINAL_PHASE1_4_FOLLOWUPS_COMPLETION_MATRIX_20260220.md  GUI_ARCHITECTURE.md  GUI_COMPLETE_CLOSEOUT.md  GUI_PHASE1_ARCH.md  GUI_PHASE1_PM_TRACKER.md  GUI_PHASE1_REVIEW.md  GUI_PHASE1_REVIEW_GATE_FINAL.md  GUI_PHASE1_REVIEW_GATE_FINAL_2.md  GUI_PHASE2_CODER_NOTES.md  GUI_PHASE2_FINAL.md  GUI_PHASE2_PM_TRACKER.md  GUI_PHASE2_REVIEW_GATE_FINAL.md  GUI_PHASE2_TEST_RESULTS.md  GUI_PHASE3_REVIEW_GATE_FINAL.md  GUI_PHASE3_REVIEW_GATE_FINAL_2.md  GUI_PHASE3_TEST_RESULTS.md  GUI_PHASE3_TEST_RESULTS_FIXPASS.md  GUI_PHASE4_ARCH.md  GUI_PHASE4_REVIEW.md  GUI_PHASE4_TEST_RESULTS.md  GUI_PHASE5_EXEC_REPORT.md  GUI_PHASE5_PM_TRACKER.md  GUI_PRODUCT_PLAN.md  GUI_PROD_HANDOVER_FINAL_NOTE.md  GUI_PROD_HARDENING_CLOSEOUT.md  GUI_QUICKSTART.md  GUI_TEST_CHECKLIST.md  METRICS_TERMINOLOGY_GUIDE.md  PHASE1_ARCH.md  PHASE1_REVIEW.md  (+31 more)
examples/: covariate_example.py  train_example.py
logs/: e2e-path-status-20260218-191847.env  extension-phase5-status-20260218-191943.env  extension-run_compare-status-20260218-191936.env  quick-gate-status-20260218-191832.env  regression-status-20260218-191902.env  synthetic-e2e-runs-20260218-211731.csv
runbook/: README.md
scripts/: benchmark_edge.py  edge_release_gate.py  edge_selection_lane.py  gen_synthetic.sh  health_check.py  ingest_edge_device_bench.py  pre_release_verify.sh  run_compare.sh  run_e2e.sh  smoke_test.sh
src/: __init__.py
tests/: test_artifacts.py  test_attention_lstm_fixes.py  test_backend_api_contract.py  test_backend_executor_modes.py  test_backend_persistence_observability.py  test_backend_security.py  test_baseline_contract.py  test_models.py  (+28 more)
(+685 files in other folders)
